--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,9 @@ ul {
   margin: 0px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-
+  align-items: center;
+  /* align-items: stretch; */
+  /* justify-content: center; */
   max-width: 600px;
 }
 ol li {
